# lightqos

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: INSTALLATION.md  architecture.md  faq.md  getting_started.md
docs/api/: drivers.md  emf.md  hio.md  the_light.md  tlm.md
docs/theory/: TUCU_FOUNDATIONS.md  process_tensors.md  shadow_tomography.md
docs/tutorials/: getting_started.md  grover.md  qft.md  vqe.md
drivers/: Cargo.toml
drivers/src/: ibm_driver.rs  ionq_driver.rs  lib.rs  mod.rs  qblox_driver.rs  simulator_driver.rs  zurich_driver.rs
examples/: basic_circuit.py  bell_state.py  bell_state_with_sla.py  high_dimensional_ghz.py  pyo3_bindings_demo.py  qiskit_integration.py  qkd_demo.py  quantum_network.py  quantum_teleportation_complete.py  the_light_showcase.py
frontend/examples/: basic_circuit.py  bell_state_with_sla.py  high_dimensional_ghz.py  qiskit_integration.py
frontend/integrations/: cirq_adapter.py  pennylane_adapter.py  qiskit_adapter.py
frontend/lightqos/: __init__.py  circuit.py  contracts.py
frontend/lightqos/integrations/: __init__.py  cirq_adapter.py  pennylane_adapter.py  qiskit_adapter.py
kernel/: Cargo.toml  lib.rs
kernel/src/: lib.rs  py_emf.rs  py_hio.rs  py_tlm.rs
kernel/src/efal/: channel.rs  defect.rs  field_driver.rs  geometry.rs  mod.rs  topology.rs
kernel/src/emf/: entanglement_pool.rs  metrics.rs  mod.rs  pser_routing.rs  recycler.rs
kernel/src/hio/: mod.rs  observable_view.rs  shadow_copy  shadow_copy.rs  statistical_guarantee.rs
kernel/src/math/: fiber_bundle.rs  geometric_algebra.rs  mod.rs  octave_algebra.rs  rigged_hilbert.rs
kernel/src/tlm/: contract.rs  harmonic_scheduler.rs  mod.rs  process_tensor.rs  snapshot.rs
kernel/tests/: efal_tests.rs  emf_tests.rs  hio_tests.rs  integration_tests.rs  math_tests.rs  tlm_tests.rs
math/: Cargo.toml
math/src/: fiber_bundle.rs  geometric_algebra.rs  lib.rs  octave_algebra.rs  rigged_hilbert.rs
network/: quantum_network.py
process_tensor/: Cargo.toml
process_tensor/src/: lib.rs  memory_kernel.rs  process_tensor.rs  quantum_channel.rs  quantum_comb.rs
protocols/: Cargo.toml  qkd.py  teleportation.py
protocols/src/: lib.rs  qcr.rs  qlc.rs  t_hqc.rs  zpe_extraction.rs
scripts/: install.sh
shadow_tomography/: Cargo.toml
shadow_tomography/src/: adaptive_resampling.rs  lib.rs  mid_circuit_feedback.rs  observable_view.rs  shadow_copy.rs  statistical_certificate.rs
simulators/: Cargo.toml
simulators/src/: efal_simulator.rs  emf_simulator.rs  lib.rs  quantum_state.rs
tests/: __init__.py  benchmark_performance.py  test_circuit.py  test_protocols.py  test_pyo3_integration.py
the_light/: __init__.py  consciousness_math.py  core.py  optimizer.py  predictor.py  transformer.py
