[workspace]
members = [
    "kernel",
    "drivers",
    "protocols",
    "simulators",
]

[workspace.package]
version = "0.0.1"
edition = "2026"
authors = ["Márcio Coutinho"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
