# -----------------------------------------------------------------------------
# LightQOS - Quantum Operating System
# Cargo.toml — Workspace / Crate manifest and dependency configuration
#
# Copyright (c) 2021 - 2026 Márcio Coutinho
# Date: 06-02-2026
# All rights reserved.
# -----------------------------------------------------------------------------

[workspace]
members = [
    "kernel",
    "drivers",
    "cli",
    "math",
    "process_tensor",
    "shadow_tomography",
    "simulators",
    "protocols",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Márcio Coutinho <marciolscoutinho@gmail.com>"]
license = "MIT"
repository = "https://github.com/marciolscoutinho/lightqos"
homepage = "https://github.com/marciolscoutinho/lightqos"
documentation = "https://docs.rs/lightqos"
readme = "README.md"
keywords = ["quantum", "quantum-computing", "quantum-os", "pyo3", "rust"]
categories = ["science", "simulation"]

[workspace.dependencies]
# Core
nalgebra = "0.32"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["serde", "v4"] }
thiserror = "1.0"
anyhow = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Math & Random
rand = "0.8"
rand_distr = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# PyO3
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py310"] }

# Dev/Test
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
