# -----------------------------------------------------------------------------
# LightQOS - Quantum Operating System
# Cargo.toml — Workspace / Crate manifest and dependency configuration
#
# Copyright (c) 2021 - 2026 Márcio Coutinho
# Date: 16-03-2023
# All rights reserved.
# -----------------------------------------------------------------------------

[package]
name = "lightqos-drivers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LightQOS Hardware Drivers (IBM, IonQ, Qblox, Zurich Instruments, Photonic)"

[dependencies]
lightqos-math = { path = "../math" }
nalgebra = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
