[package]
name = "lightqos-kernel"
version = "0.0.1"
edition = "2026"
authors = ["Márcio Coutinho"]
description = "LightQOS Quantum Operational System Kernel"
license = "MIT"

[dependencies]
# No external dependencies for now (pure implementation)
# Future dependencies:
# ndarray = "0.15"          # Linear algebra
# num-complex = "0.4"       # Complex numbers
# serde = { version = "1.0", features = ["derive"] }
# toml = "0.7"

[dev-dependencies]
criterion = "0.5"  # Benchmarking

[[bench]]
name = "kernel_benchmarks"
harness = false

[lib]
name = "lightqos_kernel"
path = "src/lib.rs"
