# -----------------------------------------------------------------------------
# LightQOS - Quantum Operating System
# Cargo.toml — Workspace / Crate manifest and dependency configuration
#
# Copyright (c) 2021 - 2026 Márcio Coutinho
# Date: 12-01-2024
# All rights reserved.
# -----------------------------------------------------------------------------

[package]
name = "lightqos-protocols"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LightQOS Quantum Protocols (T-HQC, QCR, QLC, ZPE)"

[dependencies]
lightqos-math = { path = "../math" }
nalgebra = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
