# -----------------------------------------------------------------------------
# LightQOS - Quantum Operating System
# Cargo.toml — Workspace / Crate manifest and dependency configuration
#
# Copyright (c) 2021 - 2026 Márcio Coutinho
# Date: 09-11-2022
# All rights reserved.
# -----------------------------------------------------------------------------

[package]
name = "lightqos-simulators"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LightQOS Quantum Simulators (EFAL, EMF, State Vector)"

[dependencies]
lightqos-math = { path = "../math" }
nalgebra = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
